<resources>
    <string name="app_name">HCP</string>
    <string name="lucky">lucky</string>
    <string name="sure">sure</string>
    <string name="data">success</string>
    <string name="submit">submit</string>
    <string name="hotfix">hotfix</string>
    <string name="show">show</string>
    <string name="msg">message</string>
    <string name="remove_hotfix">remo hotfix</string>
    <string name="kill_process">kill process</string>
    <string name="mvc">mvc</string>
    <string name="mvp">mvp</string>
    <string name="mvvm">mvvm</string>
    <string name="auto_save_message">auto save message</string>
    <string name="update">update</string>
    <string name="load_plugin">load plugin</string>
    <string name="robot">robot</string>
    <string name="cat">cat</string>
</resources>
