<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/l36_mvvm_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/auto_save_message"
        android:gravity="center"
        android:hint="@string/app_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/l36_btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/l36_mvvm_et" />

</androidx.constraintlayout.widget.ConstraintLayout>