<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:id="@+id/l36_btn_mvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mvc"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/l36_btn_mvp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mvp"
        app:layout_constraintTop_toBottomOf="@id/l36_btn_mvc" />

    <Button
        android:id="@+id/l36_btn_mvvm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mvvm"
        app:layout_constraintTop_toBottomOf="@id/l36_btn_mvp" />

</androidx.constraintlayout.widget.ConstraintLayout>